# dbx

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  typed-router.d.ts  vite.config.ts
.zed/: debug.json
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/classes/: config.rs  containers.rs  exported_apps.rs  mod.rs  socket.rs  system_apps.rs
src-tauri/src/controllers/: backup_controller.rs  config_controller.rs  containers_controller.rs  cron_controller.rs  distrobox_controller.rs  exported_apps_controller.rs  mod.rs  system_apps_controller.rs
src-tauri/src/scripts/: backup.conf  dbx-backup.sh  list_apps.rs  mod.rs
src-tauri/src/services/: apps_service.rs  config_service.rs  container_service.rs  mod.rs
src-tauri/src/structs/: config.rs  container.rs  mod.rs  new_container_request.rs
src/Component/: Appholder.vue  AppsContainerCard.vue  BackupContainerWithController.vue  ButtonSettingsPopUp.vue  CheckBoxWithTooltip.vue  ContainerCard.vue  ContainerController.vue  ExportedAppsPanel.vue  KeepCounter.vue  SchedualDropDown.vue  SettingsPanel.vue  SystemAppsPanel.vue  TextInputWithLable.vue  TopBar.vue  containerWithStatus.vue
src/Functions/: AppsService.ts  BackupService.ts  ConfigService.ts  ContainerControles.ts  FechingContainersWithRefresh.ts  ListingContaienrs.ts  NewContainerService.ts
src/Types/: ListContainer.ts
src/class/: backupfileslist.ts  exportedapps.ts  suggestedImages.ts
src/composables/: useSettings.ts
src/pages/: Container.vue  (+1 more)
(+20 files in other folders)
