[package]
name = "dbx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dbx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
podman-api = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.12.3"
tempfile = "3.0"
futures-util = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.140"
dirs = "6.0"
fs_extra = "1.3"
